--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,27 @@
 title: Mollie Such
+email: 
+url: http://www.molliesuch.com
 description: Nutrition and Dietetics
-google_analytics: 
-show_downloads: true
-theme: jekyll-theme-cayman
-
+google_analytics: UA-10921055-15
 gems:
-  - jekyll-mentions
+  - jekyll-redirect-from
+  - jekyll-sitemap
+
+# Color settings (hex-codes without the leading hash-tag)
+color:
+  primary-dark: '#000000'
+  links: '#219ab3'
+
+# Footer settings
+footer: Mollie Dawahare Such
+
+# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
+social:
+  - title: twitter
+    url: https://twitter.com/molliesuch
+  - title: facebook
+    url: https://www.facebook.com/mollie.dawahare
+
+# Build settings
+markdown: kramdown
+permalink: pretty
