Update about, new bg pics, fix contact email

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Mollie Such
-email: 
+email: info@molliesuch.com
 url: http://www.molliesuch.com
 description: Nutrition and Dietetics
 google_analytics: UA-10921055-15
